<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_wallet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="com.max.incomestatement.ui.AddWalletActivity.EditWalletActivity">

    <TextView
        android:textColor="@color/font"
        android:text="Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_alignTop="@+id/spinner"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:textColor="@color/font"
        android:text="Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_alignBaseline="@+id/nameIn"
        android:layout_alignBottom="@+id/nameIn"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=" "
        android:ems="10"
        android:id="@+id/nameIn"
        android:layout_marginRight="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="19dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/black" />

    <Spinner
        android:textColor="@color/font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/balanceIn"
        android:layout_alignLeft="@+id/balanceIn"
        android:layout_alignStart="@+id/balanceIn" />

    <TextView
        android:textColor="@color/font"
        android:text="Balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:id="@+id/textView5"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_below="@+id/nameIn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button

        android:text="Delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:id="@+id/delete_wallet"
        android:layout_below="@+id/spinner"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
         />

    <EditText
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/balanceIn"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/nameIn"
        android:layout_alignStart="@+id/nameIn" />


</RelativeLayout>
