...
                android:paddingBottom="6dp"
                android:visibility="gone"

                />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="bottom|end"
            android:src="@android:drawable/ic_input_add"
            android:backgroundTint="@android:color/white"
            android:layout_marginRight="11dp"
...
